Fix spacing

--- a/_sass/_navbar.scss
+++ b/_sass/_navbar.scss
@@ -86,10 +86,10 @@ div.nav-menu {
 
   li {
     width: 100%;
-    height: 60px;
       padding-right: 40px;
       box-sizing: border-box;
       direction: rtl;
+      margin-top: 1.3em;
   }
 
   a:hover {
